# glance

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  todo.md
deploy/: glance-web.service
src/glance/: article.py  asr.py  cli.py  hn.py  instagram.py  ocr.py  reddit.py  store.py  summarize.py  tiktok.py  twitter.py  web.py  youtube.py
tests/: __init__.py  test_asr.py  test_ocr.py  test_sources.py  test_store.py  test_summarize.py  test_web.py
